--- a/new_footer/index.html
+++ b/new_footer/index.html
@@ -100,7 +100,6 @@
               <style>
                 .mainpage-banner-section {
                   background-color: #fff;
-                  margin-bottom: 5rem;
                   border-radius: 1rem;
                   display: flex; 
                   justify-content: space-between;
@@ -270,15 +269,15 @@
               </style>
 
 
-              <div class="banner-menu">
-                <div class="banner-menu-items">
-                  <div class="banner-menu-item">Абитуриентам</div>
-                  <div class="banner-menu-item">Студентам</div>
-                  <div class="banner-menu-item">Аспирантам</div>
-                  <div class="banner-menu-item">Сотрудникам</div>
-                  <div class="banner-menu-item">Абитуриентам</div>
-                </div>
-              </div>
+              <nav class="banner-menu">
+                <ul class="banner-menu-items">
+                  <li class="banner-menu-item">Абитуриентам</li>
+                  <li class="banner-menu-item">Студентам</li>
+                  <li class="banner-menu-item">Аспирантам</li>
+                  <li class="banner-menu-item">Сотрудникам</li>
+                  <li class="banner-menu-item">Абитуриентам</li>
+                </ul>
+              </nav>
 
               <style type="text/css">
                 .banner-menu {
