--- a/new_footer/index.html
+++ b/new_footer/index.html
@@ -271,11 +271,26 @@
 
               <nav class="banner-menu">
                 <ul class="banner-menu-items">
-                  <li class="banner-menu-item">Абитуриентам</li>
-                  <li class="banner-menu-item">Студентам</li>
-                  <li class="banner-menu-item">Аспирантам</li>
-                  <li class="banner-menu-item">Сотрудникам</li>
-                  <li class="banner-menu-item">Абитуриентам</li>
+                  <li class="banner-menu-item">
+                    <img src="./images/entrants.svg">
+                    <p>Абитуриентам</p>
+                  </li>
+                  <li class="banner-menu-item">
+                    <img src="./images/students.svg">
+                    <p>Студентам</p>
+                  </li>
+                  <li class="banner-menu-item">
+                    <img src="./images/postgraduates.svg">
+                    <p>Аспирантам</p>
+                  </li>
+                  <li class="banner-menu-item">
+                    <img src="./images/employees.svg">
+                    <p>Сотрудникам</p>
+                  </li>
+                  <li class="banner-menu-item">
+                    <img src="./images/graduates.svg">
+                    <p>Выпускникам</p>
+                  </li>
                 </ul>
               </nav>
 
