--- a/new_footer/index.html
+++ b/new_footer/index.html
@@ -14,30 +14,23 @@
 
         <header>
 
-          <nav class="navbar" style="background-color: #e5e9f0;">
-            <div class="container" style="background-color: #fff; border-radius: 1rem; border: 1px solid #e5e9f0;">
-              <div class="navbar-brand">
-                <a class="navbar-item" href="/">
+          <section class="headr is-link is-medium">
+            <div class="header-wrapper">
+              <div class="logo-wrapper">
+                <a href="/">
                   <img src="./images/logo_2.svg" alt="Logo">
                 </a>
-                <span class="navbar-burger burger" data-target="navbarMenu">
-                  <span></span>
-                  <span></span>
-                  <span></span>
-                </span>
               </div>
-              <div id="navbarMenu" class="navbar-menu">
-                <div class="navbar-end">
-                  <a href="#university" class="navbar-item">Университет</a>
-                  <a href="#education" class="navbar-item">Образование</a>
-                  <a href="#science" class="navbar-item">Наука и инновации</a>
-                  <a href="#international" class="navbar-item">Международная деятельность</a>
-                  <a href="#dormitories" class="navbar-item">Общежития</a>
-                  <a href="#contacts" class="navbar-item">Контакты</a>
-                </div>
+              <div class="menu-wrapper navbar-end">
+                <a href="#university" class="navbar-item">Университет</a>
+                <a href="#education" class="navbar-item">Образование</a>
+                <a href="#science" class="navbar-item">Наука и инновации</a>
+                <a href="#international" class="navbar-item">Международная деятельность</a>
+                <a href="#dormitories" class="navbar-item">Общежития</a>
+                <a href="#contacts" class="navbar-item">Контакты</a>
               </div>
             </div>
-          </nav>
+          </section>
 
         </header>
 
@@ -310,6 +303,7 @@
                   padding: 1.5rem;
                   border: 1px solid #E5E9F0;
                   border-radius: 1rem;
+                  text-align: center;
                 }
               </style>
 
