--- a/new_footer/index.html
+++ b/new_footer/index.html
@@ -34,6 +34,25 @@
 
         </header>
 
+        <style type="text/css">
+          .header-wrapper {
+            padding: 0 8.33vw;
+            display: flex;
+          }
+          .logo-wrapper {
+            background-color: #fff;
+            border-radius: 1rem;
+            border: 1px solid #e5e9f0;
+            width: 20%;
+            display: flex;
+            padding: 1.5625rem 1.375rem;
+          }
+          .menu-wrapper {
+            background-color: #e5e9f0;
+            width: 80%;
+          }
+        </style>
+
         <div>
           <div>
 
