--- a/new_footer/index.html
+++ b/new_footer/index.html
@@ -48,7 +48,7 @@
             padding: 1.5625rem 1.375rem;
           }
           .menu-wrapper {
-            background-color: #e5e9f0;
+            background-color: #fff;
             width: 80%;
           }
         </style>
