--- a/new_footer/index.html
+++ b/new_footer/index.html
@@ -42,13 +42,15 @@
           .logo-wrapper {
             background-color: #fff;
             border-radius: 1rem;
-            border: 1px solid #e5e9f0;
+            border: 1px solid #E5E9F0;
             width: 20%;
             display: flex;
             padding: 1.5625rem 1.375rem;
           }
           .menu-wrapper {
             background-color: #fff;
+            border-radius: 1rem;
+            border: 1px solid #E5E9F0;
             width: 80%;
           }
         </style>
