--- a/new_footer/index.html
+++ b/new_footer/index.html
@@ -52,6 +52,7 @@
             border-radius: 1rem;
             border: 1px solid #E5E9F0;
             width: 80%;
+            padding: 1.5625rem 1.375rem;
           }
         </style>
 
