--- a/new_footer/index.html
+++ b/new_footer/index.html
@@ -287,24 +287,34 @@
               <nav class="banner-menu">
                 <ul class="banner-menu-items">
                   <li class="banner-menu-item">
-                    <img src="./images/entrants.svg">
-                    <p>Абитуриентам</p>
+                    <a href="#entrants">
+                      <img src="./images/entrants.svg">
+                      <p>Абитуриентам</p>
+                    </a>
                   </li>
                   <li class="banner-menu-item">
-                    <img src="./images/students.svg">
-                    <p>Студентам</p>
+                    <a href="#students">
+                      <img src="./images/students.svg">
+                      <p>Студентам</p>
+                    </a>
                   </li>
                   <li class="banner-menu-item">
-                    <img src="./images/postgraduates.svg">
-                    <p>Аспирантам</p>
+                    <a href="#postgraduates">
+                      <img src="./images/postgraduates.svg">
+                      <p>Аспирантам</p>
+                    </a>
                   </li>
                   <li class="banner-menu-item">
-                    <img src="./images/employees.svg">
-                    <p>Сотрудникам</p>
+                    <a href="#employees">
+                      <img src="./images/employees.svg">
+                      <p>Сотрудникам</p>
+                    </a>
                   </li>
                   <li class="banner-menu-item">
-                    <img src="./images/graduates.svg">
-                    <p>Выпускникам</p>
+                    <a href="#graduates">
+                      <img src="./images/graduates.svg">
+                      <p>Выпускникам</p>
+                    </a>
                   </li>
                 </ul>
               </nav>
