--- a/new_footer/index.html
+++ b/new_footer/index.html
@@ -330,12 +330,18 @@
                 }
                 .banner-menu-item {
                   width: 20%;
-                  background-color: #003366;
-                  color: #ffffff;
+                  background-color: #036;
+                  color: #fff;
                   padding: 1.5rem;
                   border: 1px solid #E5E9F0;
                   border-radius: 1rem;
                   text-align: center;
+                }
+                .banner-menu-item:hover {
+                  background-color: #27509B;
+                }
+                .banner-menu-item a {
+                  color: #fff;
                 }
               </style>
 
