--- a/new_footer/index.html
+++ b/new_footer/index.html
@@ -330,17 +330,16 @@
                 }
                 .banner-menu-item {
                   width: 20%;
-                  background-color: #036;
-                  color: #fff;
-                  padding: 1.5rem;
                   border: 1px solid #E5E9F0;
                   border-radius: 1rem;
                   text-align: center;
                 }
-                .banner-menu-item:hover {
+                .banner-menu-item a:hover {
                   background-color: #27509B;
                 }
                 .banner-menu-item a {
+                  background-color: #036;
+                  padding: 1.5rem;
                   color: #fff;
                 }
               </style>
