--- a/new_footer/index.html
+++ b/new_footer/index.html
@@ -218,7 +218,7 @@
                 }
                 .white-strip {
                   height: 100%;
-                  background-color: #ffffff;
+                  background-color: #fff;
                   border-top-right-radius: 1rem;
                   border-bottom-right-radius: 1rem;
                 }
@@ -236,7 +236,7 @@
                 .red-strip-wrapper {
                   height: 100%;
                   width: 33.3%;
-                  background-color: #e5e9f0;
+                  background-color: #E5E9F0;
                 }
                 .red-strip {
                   height: 100%;
@@ -262,7 +262,7 @@
                   border: 0;
                   width: .75rem !important;
                   height: .75rem;
-                  background: #003366;
+                  background: #036;
                   border-radius: 50%;
                   margin: 0 .375rem;
                   padding: .35rem;
@@ -274,7 +274,7 @@
                   border: 0;
                   width: .75rem !important;
                   height: .75rem;
-                  background: #003366;
+                  background: #036;
                   border-radius: 50%;
                   margin: 0 .375rem;
                   padding: .35rem;
