--- a/new_footer/index.html
+++ b/new_footer/index.html
@@ -338,6 +338,7 @@
                   background-color: #27509B;
                 }
                 .banner-menu-item a {
+                  display: block;
                   background-color: #036;
                   padding: 1.5rem;
                   color: #fff;
