--- a/new_footer/index.html
+++ b/new_footer/index.html
@@ -343,6 +343,9 @@
                   color: #fff;
                   border-radius: 1rem;
                 }
+                .banner-menu-item a img {
+                  margin-bottom: .5rem;
+                }
               </style>
 
               <div class="announcements">
