--- a/new_footer/index.html
+++ b/new_footer/index.html
@@ -328,6 +328,11 @@
                   padding: 0 8.33vw;
                   display: flex;
                 }
+                @media screen and (max-width: 1407px) {
+                  .banner-menu-items {
+                    padding: 0;
+                  }
+                }
                 .banner-menu-item {
                   width: 20%;
                   border: 1px solid #E5E9F0;
