--- a/new_footer/index.html
+++ b/new_footer/index.html
@@ -251,7 +251,14 @@
                   left: 8.33vw;
                   bottom: 4.375rem;
                   height: 0;
-                  width: 25vw;
+                  width: 22vw;
+                }
+
+                @media screen and (min-width: 1024px) and (max-width: 1407px) {
+                  .mainpage-slider-dots {
+                    left: 1.5rem;
+                    bottom: 2rem;
+                  }
                 }
                 
                 .mainpage-banner-section .dots > :first-child {
