--- a/new_footer/index.html
+++ b/new_footer/index.html
@@ -149,6 +149,11 @@
                     margin: 2rem 1rem 0 1.5rem;
                   }
                 }
+                @media screen and (max-width: 1023px) {
+                  .banner-text {
+                    width: 100%;
+                  }
+                }
                 .banner-title {
                   font-size: 2rem;
                   font-weight: 700;
