--- a/new_footer/index.html
+++ b/new_footer/index.html
@@ -152,6 +152,13 @@
                 @media screen and (max-width: 1023px) {
                   .banner-text {
                     width: 100%;
+                    margin: 0;
+                    padding: 1.875rem 0 0 1.5rem;
+                  }
+                }
+                @media screen and (min-width: 500px) and (max-width: 1407px) {
+                  .banner-title {
+                    font-size: 1.5rem;
                   }
                 }
                 .banner-title {
