--- a/new_footer/index.html
+++ b/new_footer/index.html
@@ -219,6 +219,11 @@
                   flex-shrink: 1;
                   line-height: .75;
                 }
+                @media screen and (max-width: 1023px) {
+                  .banner-image {
+                    width: 100%;
+                  }
+                }
                 .banner-image img {
                   width: 100%;
                   border-radius: 1rem;
