--- a/new_footer/index.html
+++ b/new_footer/index.html
@@ -162,7 +162,7 @@
                 }
 
                 @media screen and (min-width: 769px) and (max-width: 1024px) {
-                  .banner-text-info {
+                  .banner-text {
                     display: flex;
                     justify-content: space-between;
                   }
