--- a/new_footer/index.html
+++ b/new_footer/index.html
@@ -165,6 +165,7 @@
                   .banner-text {
                     display: flex;
                     justify-content: space-between;
+                    align-items: flex-start;
                   }
                 }
 
