--- a/new_footer/index.html
+++ b/new_footer/index.html
@@ -165,7 +165,6 @@
                   .banner-text {
                     display: flex;
                     justify-content: space-between;
-                    align-items: flex-start;
                   }
                 }
 
@@ -220,6 +219,11 @@
                 @media screen and (min-width: 1024px) and (max-width: 1407px) {
                   .banner-link {
                     margin-top: 1.5rem;
+                  }
+                }
+                @media screen and (min-width: 769px) and (max-width: 1024px) {
+                  .banner-link {
+                    margin-top: 0;
                   }
                 }
                 @media screen and (min-width: 1024px) {
