--- a/new_footer/index.html
+++ b/new_footer/index.html
@@ -225,7 +225,7 @@
                 }
 
                 .banner-link {
-                  /*display: inline-flex;*/
+                  display: inline-flex;
                   color: #036;
                   border-radius: 2rem;
                   border: 1px solid #036;
