--- a/new_footer/index.html
+++ b/new_footer/index.html
@@ -139,6 +139,7 @@
                 @media screen and (max-width: 1023px) {
                   .mainpage-banner {
                     flex-direction: column-reverse;
+                    justify-content: flex-end;
                   }
                 }
                 .banner-text {
