--- a/new_footer/index.html
+++ b/new_footer/index.html
@@ -170,6 +170,7 @@
                   .banner-text {
                     display: flex;
                     justify-content: space-between;
+                    column-gap: 1.5rem;
                   }
                 }
 
