--- a/new_footer/index.html
+++ b/new_footer/index.html
@@ -167,10 +167,16 @@
                 }
 
                 @media screen and (min-width: 769px) and (max-width: 1024px) {
+                  .banner-text-info {
+                    flex-shrink: 0;
+                    padding-right: 1.5rem;
+                  }
+                  .banner-link-wrapper {
+                    flex-shrink: 1;
+                  }
                   .banner-text {
                     display: flex;
                     justify-content: space-between;
-                    column-gap: 1.5rem;
                   }
                 }
 
