--- a/new_footer/index.html
+++ b/new_footer/index.html
@@ -141,6 +141,9 @@
                     flex-direction: column-reverse;
                     justify-content: flex-end;
                   }
+                  .mainpage-slider-wrapper {
+                    width: 100%;
+                  }
                 }
                 .banner-text {
                   margin: 4.375rem 5rem 0 8.33vw;
