--- a/new_footer/index.html
+++ b/new_footer/index.html
@@ -142,7 +142,13 @@
                     justify-content: flex-end;
                   }
                   .mainpage-slider-wrapper {
-                    width: 100%;
+                    width: 91.67vw;
+                  }
+                  #mainpage-slider {
+                    width: 91.67vw;
+                  }
+                  .mainpage-banner {
+                    width: 91.67vw;
                   }
                 }
                 .banner-text {
