--- a/new_footer/index.html
+++ b/new_footer/index.html
@@ -325,6 +325,27 @@
                     bottom: 2rem;
                   }
                 }
+
+                @media screen and (min-width: 769px) and (max-width: 1024px) {
+                  .mainpage-slider-dots {
+                    left: 1.5rem;
+                    bottom: 2.5rem;
+                  }
+                }
+
+                @media screen and (min-width: 500px) and (max-width: 768px) {
+                  .mainpage-slider-dots {
+                    left: 1rem;
+                    bottom: 2rem;
+                  }
+                }
+
+                @media screen and (max-width: 499px) {
+                  .mainpage-slider-dots {
+                    left: 1rem;
+                    bottom: 2.5rem;
+                  }
+                }
                 
                 .mainpage-banner-section .dots > :first-child {
                   margin-left: 0;
