--- a/new_footer/index.html
+++ b/new_footer/index.html
@@ -171,7 +171,21 @@
                   .banner-text {
                     width: 100%;
                     margin: 0;
-                    padding: 1.875rem 0 0 1.5rem;
+                  }
+                }
+                @media screen and (min-width: 769px) and (max-width: 1023px) {
+                  .banner-text {
+                    padding: 1.875rem 0 4rem 1.5rem;
+                  }
+                }
+                @media screen and (min-width: 500px) and (max-width: 768px) {
+                  .banner-text {
+                    padding: 1.625rem 0 3.5rem 1rem;
+                  }
+                }
+                @media screen and (max-width: 499px) {
+                  .banner-text {
+                    padding: 1.5rem 0 6.5625rem 1rem;
                   }
                 }
 
