--- a/new_footer/index.html
+++ b/new_footer/index.html
@@ -196,6 +196,8 @@
                   }
                   .banner-link-wrapper {
                     flex-shrink: 1;
+                    flex: none;
+                    width: 100%;
                   }
                   .banner-text {
                     display: flex;
