--- a/new_footer/index.html
+++ b/new_footer/index.html
@@ -191,13 +191,13 @@
 
                 @media screen and (min-width: 769px) and (max-width: 1024px) {
                   .banner-text-info {
-                    flex-shrink: 0;
+                    flex-shrink: 1;
+                    flex-grow: 1;
                     padding-right: 1.5rem;
                   }
                   .banner-link-wrapper {
-                    flex-shrink: 1;
                     flex: none;
-                    width: 100%;
+                    width: unset;
                   }
                   .banner-text {
                     display: flex;
