--- a/new_footer/index.html
+++ b/new_footer/index.html
@@ -230,35 +230,50 @@
                   }
                 }
 
-                @media screen and (min-width: 500px) and (max-width: 1407px) {
-                  .banner-title {
-                    font-size: 1.5rem;
-                  }
-                }
+
                 .banner-title {
                   font-size: 2rem;
                   font-weight: 700;
                   line-height: 120%;
                 }
+
                 @media screen and (min-width: 500px) and (max-width: 1407px) {
                   .banner-title {
                     font-size: 1.5rem;
                   }
                 }
+
+                @media screen and (max-width: 499px) {
+                  .banner-title {
+                    font-size: 1.25rem;
+                    line-height: 120%;
+                    letter-spacing: .01em;
+                  }
+                }
+
                 .banner-description {
                   margin-top: 1.5rem;
                   font-size: 1.125rem;
                 }
+
                 @media screen and (min-width: 1024px) and (max-width: 1407px) {
                   .banner-description {
                     margin-top: .75rem;
                   }
                 }
+
                 @media screen and (max-width: 1407px) {
                   .banner-description {
                     font-size: 1rem;
                   }
                 }
+
+                @media screen and (max-width: 499px) {
+                  .banner-description {
+                    margin-top: 1rem;
+                  }
+                }
+
                 .banner-description ul {
                   list-style: disc outside;
                   margin-left: 1.5rem;
@@ -282,6 +297,12 @@
                   }
                 }
 
+                @media screen and (max-width: 499px) {
+                  .banner-link-wrapper {
+                    margin-top: 1.5rem;
+                  }
+                }
+
                 .banner-link {
                   display: inline-flex;
                   color: #036;
@@ -292,6 +313,12 @@
                   font-size: 1rem;
                   font-weight: 700;
                   line-height: 120%;
+                }
+
+                @media screen and (max-width: 499px) {
+                  .banner-link {
+                    letter-spacing: .01em;
+                  }
                 }
 
                 @media screen and (min-width: 1024px) {
