--- a/new_footer/index.html
+++ b/new_footer/index.html
@@ -501,6 +501,11 @@
                   background-color: #E5E9F0;
                   margin-bottom: 10rem;
                 }
+                @media screen and (max-width: 499px) {
+                  .banner-menu {
+                    margin-bottom: 4.875rem;
+                  }
+                }
                 .banner-menu-items {
                   padding: 0 8.33vw;
                   display: flex;
