--- a/new_footer/index.html
+++ b/new_footer/index.html
@@ -528,7 +528,7 @@
                 .banner-menu-item a {
                   display: block;
                   background-color: #036;
-                  padding: 1.5rem;
+                  padding: 1.5rem 0;
                   color: #fff;
                   border-radius: 1rem;
                 }
