--- a/new_footer/index.html
+++ b/new_footer/index.html
@@ -414,6 +414,7 @@
                   .mainpage-slider-dots {
                     left: 1.5rem;
                     bottom: 2.5rem;
+                    width: calc(91.67vw - 1.5rem);
                   }
                 }
 
@@ -421,6 +422,7 @@
                   .mainpage-slider-dots {
                     left: 1rem;
                     bottom: 2rem;
+                    width: calc(91.67vw - 1rem);
                   }
                 }
 
@@ -428,6 +430,7 @@
                   .mainpage-slider-dots {
                     left: 1rem;
                     bottom: 2.5rem;
+                    width: calc(83.33vw - 1rem);
                   }
                 }
                 
