--- a/new_footer/index.html
+++ b/new_footer/index.html
@@ -237,6 +237,12 @@
                   line-height: 120%;
                 }
 
+                @media screen and (max-width: 1407px) {
+                  .banner-title {
+                    letter-spacing: .01em;
+                  }
+                }
+
                 @media screen and (min-width: 500px) and (max-width: 1407px) {
                   .banner-title {
                     font-size: 1.5rem;
@@ -246,8 +252,6 @@
                 @media screen and (max-width: 499px) {
                   .banner-title {
                     font-size: 1.25rem;
-                    line-height: 120%;
-                    letter-spacing: .01em;
                   }
                 }
 
