--- a/new_footer/index.html
+++ b/new_footer/index.html
@@ -509,6 +509,21 @@
                   background-color: #E5E9F0;
                   margin-bottom: 10rem;
                 }
+                @media screen and (min-width: 1408px) and (max-width: 1899px) {
+                  .banner-text {
+                    margin-bottom: 6.25rem;
+                  }
+                }
+                @media screen and (min-width: 769px) and (max-width: 1407px) {
+                  .banner-menu {
+                    margin-bottom: 7.5rem;
+                  }
+                }
+                @media screen and (min-width: 500px) and (max-width: 768px) {
+                  .banner-menu {
+                    margin-bottom: 4.25rem;
+                  }
+                }
                 @media screen and (max-width: 499px) {
                   .banner-menu {
                     margin-bottom: 4.875rem;
