--- a/new_footer/index.html
+++ b/new_footer/index.html
@@ -67,7 +67,7 @@
                 <div class="common-wrap">
 
                   <div id="mainpage-slider" class="keen-slider">
-                    <div class="keen-slider__slide number-slide1 mainpage-banner">
+                    <div class="keen-slider__slide mainpage-banner">
                       <div class="banner-text">
                         <div class="banner-text-info">
                           <p class="banner-title">Инфраструктура</p>
@@ -88,7 +88,7 @@
                          <img src="./images/poster_1.jpg">
                        </div>
                     </div>
-                    <div class="keen-slider__slide number-slide2 mainpage-banner">
+                    <div class="keen-slider__slide mainpage-banner">
                       <div class="banner-text">
                         <div class="banner-text-info">
                           <p class="banner-title">В Горном идет приемная кампания</p>
