--- a/new_footer/index.html
+++ b/new_footer/index.html
@@ -647,6 +647,238 @@
                 </div>
               </div>
 
+<div class="marquee-wrapper">
+  <div class="marquee-content">
+    <div class="marquee Item">
+      <a href="https://www.sibur.ru/ru/">
+        <img src=".images/sibur.png') }}">
+      </a>
+    </div>
+    <div class="marquee Item">
+      <a href="https://www.rosneft.ru/">
+        <img src=".images/rosneft.png') }}">
+      </a>
+    </div>
+    <div class="marquee Item">
+      <a href="https://www.tatneft.ru/">
+        <img src=".images/tatneft.png') }}">
+      </a>
+    </div>
+    <div class="marquee Item">
+      <a href="https://rmk-group.ru/ru/">
+        <img src=".images/rmk.png') }}">
+      </a>
+    </div>
+    <div class="marquee Item">
+      <a href="https://belaz.by/">
+        <img src=".images/belaz.png') }}">
+      </a>
+    </div>
+    <div class="marquee Item">
+      <a href="https://www.gazprom.ru/">
+        <img src=".images/gazprom.png') }}">
+      </a>
+    </div>
+    <div class="marquee Item">
+      <a href="https://www.caterpillar.com/">
+        <img src=".images/caterpillar.png') }}">
+      </a>
+    </div>
+    <div class="marquee Item">
+      <a href="https://www.orica.com/">
+        <img src=".images/orica.png') }}">
+      </a>
+    </div>
+    <div class="marquee Item">
+      <a href="https://www.novatek.ru/ru/">
+        <img src=".images/novatek.png') }}">
+      </a>
+    </div>
+    <div class="marquee Item">
+      <a href="http://www.titan-omsk.ru/">
+        <img src=".images/titan.png') }}">
+      </a>
+    </div>
+    <div class="marquee Item">
+      <a href="https://systeme.ru/">
+        <img src=".images/system_electric.png') }}">
+      </a>
+    </div>
+    <div class="marquee Item">
+      <a href="https://vinacomin.vn/">
+        <img src=".images/vinacomin.png') }}">
+      </a>
+    </div>
+    <div class="marquee Item">
+      <a href="https://kali.by/">
+        <img src=".images/belaruskali.png') }}">
+      </a>
+    </div>
+    <div class="marquee Item">
+      <a href="https://www.marubeni.com/en/">
+        <img src=".images/marubeni.png') }}">
+      </a>
+    </div>
+    <div class="marquee Item">
+      <a href="https://www.zeppelin.ru/">
+        <img src=".images/zeppelin.png') }}">
+      </a>
+    </div>
+    <div class="marquee Item">
+      <a href="https://endiamaimprensa.com/">
+        <img src=".images/endiama.png') }}">
+      </a>
+    </div>
+    <div class="marquee Item">
+      <a href="https://mrg.gazprom.ru/">
+        <img src=".images/gazprom_mrg.png') }}">
+      </a>
+    </div>
+
+    <div class="marquee Item">
+      <a href="https://www.sibur.ru/ru/">
+        <img src=".images/sibur.png') }}">
+      </a>
+    </div>
+    <div class="marquee Item">
+      <a href="https://www.rosneft.ru/">
+        <img src=".images/rosneft.png') }}">
+      </a>
+    </div>
+    <div class="marquee Item">
+      <a href="https://www.tatneft.ru/">
+        <img src=".images/tatneft.png') }}">
+      </a>
+    </div>
+    <div class="marquee Item">
+      <a href="https://rmk-group.ru/ru/">
+        <img src=".images/rmk.png') }}">
+      </a>
+    </div>
+    <div class="marquee Item">
+      <a href="https://belaz.by/">
+        <img src=".images/belaz.png') }}">
+      </a>
+    </div>
+    <div class="marquee Item">
+      <a href="https://www.gazprom.ru/">
+        <img src=".images/gazprom.png') }}">
+      </a>
+    </div>
+    <div class="marquee Item">
+      <a href="https://www.caterpillar.com/">
+        <img src=".images/caterpillar.png') }}">
+      </a>
+    </div>
+    <div class="marquee Item">
+      <a href="https://www.orica.com/">
+        <img src=".images/orica.png') }}">
+      </a>
+    </div>
+    <div class="marquee Item">
+      <a href="https://www.novatek.ru/ru/">
+        <img src=".images/novatek.png') }}">
+      </a>
+    </div>
+    <div class="marquee Item">
+      <a href="http://www.titan-omsk.ru/">
+        <img src=".images/titan.png') }}">
+      </a>
+    </div>
+    <div class="marquee Item">
+      <a href="https://systeme.ru/">
+        <img src=".images/system_electric.png') }}">
+      </a>
+    </div>
+    <div class="marquee Item">
+      <a href="https://vinacomin.vn/">
+        <img src=".images/vinacomin.png') }}">
+      </a>
+    </div>
+    <div class="marquee Item">
+      <a href="https://kali.by/">
+        <img src=".images/belaruskali.png') }}">
+      </a>
+    </div>
+    <div class="marquee Item">
+      <a href="https://www.marubeni.com/en/">
+        <img src=".images/marubeni.png') }}">
+      </a>
+    </div>
+    <div class="marquee Item">
+      <a href="https://www.zeppelin.ru/">
+        <img src=".images/zeppelin.png') }}">
+      </a>
+    </div>
+    <div class="marquee Item">
+      <a href="https://endiamaimprensa.com/">
+        <img src=".images/endiama.png') }}">
+      </a>
+    </div>
+    <div class="marquee Item">
+      <a href="https://mrg.gazprom.ru/">
+        <img src=".images/gazprom_mrg.png') }}">
+      </a>
+    </div>
+  </div>
+</div>
+
+<style type="text/css">
+  .marquee-wrapper {
+    /*overflow-x: hidden;*/
+    margin-bottom: 5rem;
+  }
+
+  .marquee-content{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 850vw;
+    height: 14.125rem;
+  }
+
+  .marquee {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 14.125rem;
+    width: 25vw;
+    /*line 43 is very important. since we have 16 items, width of the Marquee which is 200vw must be devided between them. which turns out to be 12.5vw*/
+    /*margin: 10px;*/
+    /*border-radius: 1rem;*/
+  }
+
+  .marquee img {
+    border: 1px solid #E5E9F0;
+    border-radius: 1rem;
+    height: 100%;
+  }
+
+  .marquee a {
+    line-height: 0.75;
+  }
+
+  .marquee-content {
+    animation: Scroll 60s linear infinite;
+    /*animation-direction: reverse;*/
+  }
+
+  @keyframes Scroll {
+    0% {
+        transform: translateX(-124vw);
+        -webkit-transform: translateX(-124vw);
+      }
+    100% {
+      transform: translateX(0.5vw);
+      -webkit-transform: translateX(0.5vw);
+    }
+  }
+
+  .marquee-wrapper:hover .marquee-content {
+    animation-play-state: paused;
+  }
+</style>
+
             </main>
 
           </div>
